syntax = "proto3";

import "monitor_core_types.proto";

package collector;

service Collector {
  rpc GetMetrics (GetMetricsRequest) returns (MetricsReply) {}
  rpc StreamMetrics (StreamMetricsRequest) returns (stream monitor_core_types.Metric) {}
  rpc StreamLogs (StreamLogsRequest) returns (stream monitor_core_types.Log) {}
  rpc ForceRun (ForceRunRequest) returns (ForceRunReply) {}
}

message GetMetricsRequest {}

message MetricsReply {
  repeated monitor_core_types.Metric metrics = 1;
}

message StreamMetricsRequest {}

message StreamLogsRequest {}

message ForceRunRequest {
  string job_name = 1;
}

message ForceRunReply {}
